# complex-system-tech

./: .gitignore  CMakeLists.txt  Makefile  sorted list allocator trace logs.txt
src/: CircularDoublyLinkedList.cpp  CircularDoublyLinkedList.h  DoublyLinkedCircularList.cpp  DoublyLinkedCircularList.h  main.cpp
src/problem_set_0/: CircularDoublyLinkedList.h
src/problem_set_1/: allocator.cpp  allocator.h  allocator_boundary_descriptor.cpp  allocator_boundary_descriptor.h  m_allocator.h  simple_allocator.cpp  simple_allocator.h
